--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,27 @@
+##	database
 spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:mysql://a2cd4bd8432c00d35e7.ddns.net:3306/sampledb
 spring.datasource.username=sampledb_dba
 spring.datasource.password=BG3V9Z47GLSAX6CGSAG4QLHM
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.platform=mysql
+spring.sql.init.platform=mysql
 #spring.jpa.show-sql: true
 
 #spring.sql.init.mode=always
 spring.sql.init.schema-locations=classpath:db.migration/schema-mysql.sql
 spring.sql.init.data-locations=classpath:db.migration/data-mysql.sql 
 
-#security.basic.enabled=false
-#management.security.enabled=false
+security.basic.enabled=false
+management.security.enabled=false
+
+spring.web.resources.static-locations=classpath:/static/
+
+product.images.public-url=http://localhost:8080/product-images/
+product.images.upload-directory=./statics/product-images/
+product.images.default-extension=.png
+product.images.data-type=data:image/png;base64,
+
+##	cache control
+#spring.web.resources.cache.cachecontrol.no-store=true
+#spring.web.resources.cache.cachecontrol.must-revalidate=true
+#spring.web.resources.cache.cachecontrol.no-cache=true
