--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
+
 ##	database
 spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://a2cd4bd8432c00d35e7.ddns.net:3306/sampledb
+spring.datasource.url=jdbc:mysql://localhost:3306/sampledb
 spring.datasource.username=sampledb_dba
 spring.datasource.password=BG3V9Z47GLSAX6CGSAG4QLHM
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -14,7 +15,7 @@ spring.sql.init.data-locations=classpath:db.migration/data-mysql.sql
 security.basic.enabled=false
 management.security.enabled=false
 
-spring.web.resources.static-locations=classpath:/static/
+spring.web.resources.static-locations=file:./statics/
 
 product.images.public-url=http://localhost:8080/product-images/
 product.images.upload-directory=./statics/product-images/
@@ -25,3 +26,7 @@ product.images.data-type=data:image/png;base64,
 #spring.web.resources.cache.cachecontrol.no-store=true
 #spring.web.resources.cache.cachecontrol.must-revalidate=true
 #spring.web.resources.cache.cachecontrol.no-cache=true
+
+spring.jpa.open-in-view=false
+
+#spring.mvc.pathmatch.matching-strategy=ant_path_matcher
