--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,8 +12,8 @@ spring.sql.init.platform=mysql
 spring.sql.init.schema-locations=classpath:db.migration/schema-mysql.sql
 spring.sql.init.data-locations=classpath:db.migration/data-mysql.sql 
 
-security.basic.enabled=false
-management.security.enabled=false
+security.basic.enabled=true
+management.security.enabled=true
 
 spring.web.resources.static-locations=file:./statics/
 
@@ -30,3 +30,8 @@ product.images.data-type=data:image/png;base64,
 spring.jpa.open-in-view=false
 
 #spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+
+jwt.public.key=classpath:/key/app.pub
+jwt.private.key=classpath:key/app.key
+
+#logging.level.org.springframework=TRACE
