Add jwt handling

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,3 +35,4 @@ jwt.public.key=classpath:/key/app.pub
 jwt.private.key=classpath:key/app.key
 
 #logging.level.org.springframework=TRACE
+management.endpoints.web.exposure.include=*
